# work-time

./: .gitignore  LICENSE  Makefile  README.md  testdata.data  work-time.cabal
app/: Main.hs
src/: WorkTime.hs
src/WorkTime/: Reporting.hs  WorkTime.hs
