name:           work-time
version:        0.1.0.0
category:       Business
homepage:       https://gitlab.com/gonz/work-time
author:         Rickard Andersson
maintainer:     gonz@severnatazvezda.com
copyright:      2018 Rickard Andersson
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md
  , testdata.data

library
  other-modules:
      Paths_work_time
    , WorkTime.Reporting
    , WorkTime.WorkTime
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text >= 1.2.3.0 && < 1.3
    , attoparsec >=0.13.2.2 && <0.14
    , containers >= 0.5.10.2 && < 0.6
  default-language: Haskell2010
  exposed-modules: WorkTime